--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+
 body {
     margin: 0;
   }
@@ -14,7 +16,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    padding: 1.5em;
+    padding: 2em;
     /* justify-content: center;
     align-items: center; */
     height: 100%;
@@ -33,7 +35,6 @@ body {
   .background {position: absolute;
     height: 100%;
     width: 100%;
-    object-fit: repeat;
     z-index: -1;
 }
 
@@ -44,11 +45,16 @@ body {
     object-fit: cover;
     z-index: -1;
   }
+
+  .archivo-black-regular {
+    font-family: "Archivo Black", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
   
   .title {
-    font-size: 4rem;
+    font-size: 3rem;
     color: rgb(14, 14, 14);
-    /* text-shadow: 0 0 5px black;; */
   }
   
   .text-first {
@@ -57,13 +63,6 @@ body {
     background-color: #333;
     color: white;
   }
-
-  /* .text-contain {
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-  } */
 
   .left{
     text-align: left;
